--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "next-js-ecommerce-store",
   "version": "0.1.0",
   "private": true,
+  "type": "commonjs",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -10,7 +11,9 @@
   },
   "dependencies": {
     "@emotion/react": "^11.10.4",
+    "dotenv-safe": "^8.2.0",
     "next": "12.3.1",
+    "postgres": "3.3.1",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
     "sharp": "^0.31.0"
