--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,14 +11,16 @@
     "isolatedModules": true,
     "allowJs": true,
     "allowSyntheticDefaultImports": true,
+    "jsxImportSource": "@emotion/react",
     "downlevelIteration": true,
     "forceConsistentCasingInFileNames": true,
-    "jsx": "react-jsx",
+    "jsx": "preserve",
     "noEmit": true,
     "noFallthroughCasesInSwitch": true,
     "skipLibCheck": true,
     "strict": true,
-    "noUncheckedIndexedAccess": true
+    "noUncheckedIndexedAccess": true,
+    "incremental": true
   },
   "include": [
     "**/.eslintrc.cjs",
