--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "next": "12.3.1",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
+    "dotenv-safe": "^8.2.0",
+    "postgres": "3.3.1",
     "sharp": "^0.31.0"
   },
   "devDependencies": {
