Fix .env issues

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-PGHOST = ###############,
-PGUSERNAME = ###############,
-PGPASSWORD = ###############,
-PGDATABASE = ###############,
+PGHOST = ###############
+PGUSERNAME = ###############
+PGPASSWORD = ###############
+PGDATABASE = ###############
