--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   },
   "dependencies": {
     "@emotion/react": "^11.10.4",
+    "dotenv-safe": "^8.2.0",
+    "js-cookie": "^3.0.1",
     "next": "12.3.1",
+    "postgres": "3.3.1",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
-    "dotenv-safe": "^8.2.0",
-    "postgres": "3.3.1",
     "sharp": "^0.31.0"
   },
   "devDependencies": {
