--- a/package.json
+++ b/package.json
@@ -13,33 +13,34 @@
     "@emotion/react": "^11.10.4",
     "@types/dotenv": "^8.2.0",
     "@types/dotenv-safe": "^8.1.2",
-    "cli": "^1.0.1",
-    "dotenv": "^16.0.3",
+    "@types/node": "18.7.18",
+    "@types/react": "18.0.21",
+    "@types/react-dom": "18.0.6",
     "dotenv-cli": "^6.0.0",
     "dotenv-safe": "^8.2.0",
+    "eslint-plugin-jsx-expressions": "^1.3.1",
     "js-cookie": "^3.0.1",
     "ley": "^0.8.1",
     "next": "12.3.1",
     "postgres": "3.3.1",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
-    "sharp": "^0.31.0"
+    "sharp": "^0.31.0",
+    "typescript": "4.8.3"
   },
   "devDependencies": {
     "@babel/eslint-parser": "7.19.1",
     "@next/eslint-plugin-next": "12.3.1",
-    "@types/node": "18.7.18",
-    "@types/react": "18.0.21",
-    "@types/react-dom": "18.0.6",
+    "@types/js-cookie": "^3.0.2",
+    "@types/sharp": "^0.31.0",
     "@typescript-eslint/eslint-plugin": "5.38.0",
     "@typescript-eslint/parser": "5.38.0",
-    "@upleveled/eslint-config-upleveled": "2.14.0",
+    "@upleveled/eslint-config-upleveled": "^3.3.9",
     "@upleveled/eslint-plugin-upleveled": "2.1.6",
     "eslint": "8.23.1",
     "eslint-config-next": "12.3.1",
     "eslint-config-react-app": "7.0.1",
     "eslint-import-resolver-typescript": "3.5.1",
-    "eslint-plugin-cypress": "2.12.1",
     "eslint-plugin-flowtype": "8.0.3",
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-jest": "27.0.4",
@@ -49,8 +50,7 @@
     "eslint-plugin-security": "1.5.0",
     "eslint-plugin-sonarjs": "0.15.0",
     "eslint-plugin-testing-library": "5.6.4",
-    "eslint-plugin-unicorn": "43.0.2",
-    "typescript": "4.8.3"
+    "eslint-plugin-unicorn": "43.0.2"
   },
   "resolutions": {
     "@typescript-eslint/eslint-plugin": "5.38.0",
